# adsorption-database

./: .flake8  .gitignore  README.md  conftest.py  create_experiments.py  create_experiments_dre.py  create_experiments_hefti_13x.py  create_experiments_hefti_zsm5.py  create_experiments_mofahari.py  create_experiments_sudi.py  dev-requirements.in  environment.yml  mypy.ini  pyproject.toml  requirements.in  requirements.txt  storage.hdf5  tasks.py
.github/workflows/: main.yml
adsorption_database/: __init__.py  _adsorption_database.py  create_experiments.py  defaults.py  helpers.py  shared.py  storage_provider.py
adsorption_database/handlers/: __init__.py  abstract_handler.py  conftest.py  text_file_hander.py
adsorption_database/handlers/tests/: test_abstract_handler.py  test_file_handler.py
adsorption_database/handlers/tests/test_abstract_handler/: test_register_adsorbate.yml  test_register_experiment.yml  test_register_experiment_and_dump.yml  test_register_mix_isotherm.yml  test_register_mono_isotherm.yml
adsorption_database/handlers/tests/test_file_handler/: mixture_tree_components_example.txt  mixture_two_components_example.txt  pure_example.txt  test_create_mix_isotherm.yml  test_create_mono_isotherm.yml
adsorption_database/models/: __init__.py  adsorbate.py  adsorbent.py  experiment.py  isotherms.py
adsorption_database/serializers/: abstract_serializer.py  attrs_serializer.py  conftest.py  experiment_serializer.py  mix_isotherm_serializer.py  mono_isotherm_serializer.py  shared.py
adsorption_database/serializers/tests/: test_abstract_serializer.py  test_attrs_serializer.py  test_experiment_serializer.py  test_mix_isotherm_serializer.py  test_mono_isotherm_serializer.py
adsorption_database/serializers/tests/test_attrs_serializer/: test_dump_adsorbate.yml  test_dump_adsorbent.yml
adsorption_database/serializers/tests/test_experiment_serializer/: test_dump_experiment.yml
adsorption_database/serializers/tests/test_mix_isotherm_serializer/: test_dump_mix_isotherm.yml
adsorption_database/storage/: storage.hdf5  storage_regression.json
adsorption_database/tests/: test_adsorption_database.py
adsorption_database/tests/test_adsorption_database/: test_get_storage_regression.yml  test_list_adsorbates.yml  test_list_adsorbents.yml  test_list_experiments.yml  test_list_papers.yml
src/: __init__.py  create_experiments.py  data_types.py  experiment.py  isotherms.py
(+3 files in other folders)
