[project]
name = "adsorption-database"
version = "0.0.1"
authors = [
  { name="Marcus Pereira", email="mav.pereira@outlook.com" },
]
description = "A repository to add and get adsorption isotherms from literature"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mv-per/adsorption-database"
"Bug Tracker" = "https://github.com/mv-per/adsorption-database/issues"

[tool.setuptools]
py-modules=["adsorption_database"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"